force-app/main/default/objects/tc9_edc__Setup_Pay_Schedule__mdt/tc9_edc__Setup_Pay_Schedule__mdt.object-meta.xml
<CustomObject>
    <description>Post Installation Pay Schedules available for setup</description>
    <label>Setup Pay Schedule</label>
    <pluralLabel>Setup Pay Schedules</pluralLabel>
</CustomObject>