force-app/main/default/objects/tc9_edc__Setup_Pay_Schedule__mdt/fields/tc9_edc__Auto_Pay_Days_per_Year__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Auto_Pay_Days_per_Year__c</fullName>
    <label>Auto Pay Days per Year</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>