force-app/main/default/objects/tc9_edc__Setup_Pay_Schedule__mdt/fields/tc9_edc__From_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__From_Email_Address__c</fullName>
    <label>From Email Address</label>
    <type>Email</type>
</CustomField>