force-app/main/default/objects/tc9_edc__Setup_Pay_Schedule__mdt/fields/tc9_edc__Pay_Advice_Detail_Level__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Pay_Advice_Detail_Level__c</fullName>
    <label>Pay Advice Detail Level</label>
    <length>200</length>
    <type>Text</type>
</CustomField>