force-app/main/default/objects/tc9_edc__Setup_Pay_Schedule__mdt/fields/tc9_edc__Period_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Period_Type__c</fullName>
    <label>Period Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>