force-app/main/default/objects/tc9_edc__Setup_Pay_Schedule__mdt/fields/tc9_edc__Record_Type_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Record_Type_DeveloperName__c</fullName>
    <label>Record Type DeveloperName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>