force-app/main/default/objects/tc9_edc__Setup_Pay_Schedule__mdt/fields/tc9_edc__Schedule_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Schedule_Name__c</fullName>
    <label>Schedule Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>