force-app/main/default/objects/tc9_edc__Setup_Pay_Schedule__mdt/fields/tc9_edc__Source_Update_Pay_Batch__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Source_Update_Pay_Batch__c</fullName>
    <label>Source Update Pay Batch</label>
    <length>200</length>
    <type>Text</type>
</CustomField>